edgeZone.tf
#creates VPC
resource "aws_vpc" "Edge" {
  cidr_block       = "10.10.10.0/24"
  instance_tenancy = "default"
  tags = {
    Name = "Edge"
  }
}

#Subnet for edge devices
resource "aws_subnet" "Edge" {
  vpc_id     = aws_vpc.Edge.id
  cidr_block = "10.10.10.0/24"
  depends_on = [aws_vpc.Edge]
  tags = {
    Name = "Edge"
  }
}

#Internet gateway for Edge VPC
resource "aws_internet_gateway" "Edge" {
  vpc_id     = aws_vpc.Edge.id
  depends_on = [aws_vpc.Edge]
  tags = {
    Name = "Edge"
  }
}

#creating aws_eip
resource "aws_eip" "Edge" {
  instance   = aws_instance.edge.id
  depends_on = [aws_internet_gateway.Edge, aws_instance.edge]
  vpc        = true
}

#create route table for VPC
resource "aws_route_table" "r" {
  vpc_id = aws_vpc.Edge.id
  depends_on   = [aws_internet_gateway.Edge, aws_vpc.Edge]
  route {
    cidr_block = "10.10.10.0/24"
    gateway_id = aws_internet_gateway.Edge.id
  }

  tags = {
    Name = "Edge"
  }
}

#security group for bastion host
resource "aws_security_group" "Edge" {
  name        = "Edge Rules"
  description = "Allow SSH traffic into Edge"
  vpc_id      = aws_vpc.Edge.id
  depends_on = [aws_internet_gateway.Edge]
  /*
  ingress {
    # SSH from known IPs
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["38.77.49.40/32", "108.183.251.164/32"]
  }
  */

  ingress {
    # Allow ping
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 8
    to_port     = 0
    protocol    = "icmp"
    cidr_blocks = ["0.0.0.0/0"]

  }
}

#set up edge instance
resource "aws_instance" "edge" {
  ami                    = "ami-00068cd7555f543d5"
  instance_type          = "t2.micro"
  key_name               = "x1Carbon"
  subnet_id              = aws_subnet.Edge.id
  vpc_security_group_ids = [aws_security_group.Edge.id]
  depends_on             = [aws_subnet.Edge, aws_security_group.Edge]
}
